#9 Updated NSG* to NSK* classes

--- a/docs/api-reference/CRMScript.NetServer.NSHeadingEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHeadingEntity.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSHeadingEntity.#ctor
   - CRMScript.NetServer.NSHeadingEntity.GetDeleted()
   - CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
   - CRMScript.NetServer.NSHeadingEntity.GetName()
   - CRMScript.NetServer.NSHeadingEntity.GetRank()
   - CRMScript.NetServer.NSHeadingEntity.GetTooltip()
   - CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
-  - CRMScript.NetServer.NSHeadingEntity.#ctor
   - CRMScript.NetServer.NSHeadingEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSHeadingEntity.SetHeadingId(Integer)
   - CRMScript.NetServer.NSHeadingEntity.SetName(String)
@@ -25,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSHeadingEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSHeadingEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSHeadingEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSHeadingEntity.GetDeleted()
-  type: Method
-  summary: "\nTrue if the heading is marked as deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSHeadingEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
-  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
-  id: 'GetHeadingId()'
-  so.intellisense: NSHeadingEntity.GetHeadingId
-  langs:
-  - crmscript
-  name: 'GetHeadingId()'
-  nameWithType: NSHeadingEntity.GetHeadingId()
-  fullName: CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetHeadingId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHeadingEntity thing;\nInteger headingId = thing.GetHeadingId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHeadingEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSHeadingEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSHeadingEntity.GetName()
-  fullName: CRMScript.NetServer.NSHeadingEntity.GetName()
-  type: Method
-  summary: "\nThe visible heading\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSHeadingEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHeadingEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSHeadingEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSHeadingEntity.GetRank()
-  fullName: CRMScript.NetServer.NSHeadingEntity.GetRank()
-  type: Method
-  summary: "\nRank order\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHeadingEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHeadingEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSHeadingEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSHeadingEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSHeadingEntity.GetTooltip()
-  type: Method
-  summary: "\nTooltip or other description\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSHeadingEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
-  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
-  id: 'GetUdListDefinitionId()'
-  so.intellisense: NSHeadingEntity.GetUdListDefinitionId
-  langs:
-  - crmscript
-  name: 'GetUdListDefinitionId()'
-  nameWithType: NSHeadingEntity.GetUdListDefinitionId()
-  fullName: CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
-  type: Method
-  summary: "\nThe ID of the list which this heading belongs to\n"
-  remarks: 
-  syntax: 
-    content: Integer GetUdListDefinitionId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHeadingEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHeadingEntity.#ctor
   commentId: M:CRMScript.NetServer.NSHeadingEntity.#ctor
   id: '#ctor'
@@ -154,6 +40,126 @@ items:
   syntax: 
     content: NSHeadingEntity
   example: 
+- uid: CRMScript.NetServer.NSHeadingEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSHeadingEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSHeadingEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSHeadingEntity.GetDeleted()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if the heading is marked as deleted
+  example: 
+  - "\n<pre><code>NSHeadingEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
+  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
+  id: 'GetHeadingId()'
+  so.intellisense: NSHeadingEntity.GetHeadingId
+  langs:
+  - crmscript
+  name: 'GetHeadingId()'
+  nameWithType: NSHeadingEntity.GetHeadingId()
+  fullName: CRMScript.NetServer.NSHeadingEntity.GetHeadingId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetHeadingId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSHeadingEntity thing;\nInteger headingId = thing.GetHeadingId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHeadingEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSHeadingEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSHeadingEntity.GetName()
+  fullName: CRMScript.NetServer.NSHeadingEntity.GetName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The visible heading
+  example: 
+  - "\n<pre><code>NSHeadingEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHeadingEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSHeadingEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSHeadingEntity.GetRank()
+  fullName: CRMScript.NetServer.NSHeadingEntity.GetRank()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order
+  example: 
+  - "\n<pre><code>NSHeadingEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHeadingEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSHeadingEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSHeadingEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSHeadingEntity.GetTooltip()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip or other description
+  example: 
+  - "\n<pre><code>NSHeadingEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
+  commentId: M:CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
+  id: 'GetUdListDefinitionId()'
+  so.intellisense: NSHeadingEntity.GetUdListDefinitionId
+  langs:
+  - crmscript
+  name: 'GetUdListDefinitionId()'
+  nameWithType: NSHeadingEntity.GetUdListDefinitionId()
+  fullName: CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetUdListDefinitionId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the list which this heading belongs to
+  example: 
+  - "\n<pre><code>NSHeadingEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHeadingEntity.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSHeadingEntity.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -164,14 +170,14 @@ items:
   nameWithType: NSHeadingEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetDeleted(Bool)
   type: Method
-  summary: "\nTrue if the heading is marked as deleted\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the heading is marked as deleted
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +192,14 @@ items:
   nameWithType: NSHeadingEntity.SetHeadingId(Integer)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetHeadingId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetHeadingId(Integer headingId)
     parameters:
     - id: headingId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSHeadingEntity.SetName(String)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetName(String)
   type: Method
-  summary: "\nThe visible heading\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The visible heading
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSHeadingEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSHeadingEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetTooltip(String)
   type: Method
-  summary: "\nTooltip or other description\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip or other description
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSHeadingEntity.SetUdListDefinitionId(Integer)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetUdListDefinitionId(Integer)
   type: Method
-  summary: "\nThe ID of the list which this heading belongs to\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUdListDefinitionId(Integer udListDefinitionId)
     parameters:
     - id: udListDefinitionId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the list which this heading belongs to
     return:
       type: CRMScript.Global.Void
   example: 
