--- a/docs/api-reference/CRMScript.NetServer.NSHistoryRequest.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHistoryRequest.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSHistoryRequest.#ctor
   - CRMScript.NetServer.NSHistoryRequest.GetEntityName()
   - CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
   - CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
-  - CRMScript.NetServer.NSHistoryRequest.#ctor
   - CRMScript.NetServer.NSHistoryRequest.SetEntityName(String)
   - CRMScript.NetServer.NSHistoryRequest.SetEntityOrParentId(Integer)
   - CRMScript.NetServer.NSHistoryRequest.SetRequestForNewRecord(Bool)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSHistoryRequest.GetEntityName()
-  commentId: M:CRMScript.NetServer.NSHistoryRequest.GetEntityName()
-  id: 'GetEntityName()'
-  so.intellisense: NSHistoryRequest.GetEntityName
-  langs:
-  - crmscript
-  name: 'GetEntityName()'
-  nameWithType: NSHistoryRequest.GetEntityName()
-  fullName: CRMScript.NetServer.NSHistoryRequest.GetEntityName()
-  type: Method
-  summary: "\nName of entity to get history for\n"
-  remarks: 
-  syntax: 
-    content: String GetEntityName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSHistoryRequest thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
-  commentId: M:CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
-  id: 'GetEntityOrParentId()'
-  so.intellisense: NSHistoryRequest.GetEntityOrParentId
-  langs:
-  - crmscript
-  name: 'GetEntityOrParentId()'
-  nameWithType: NSHistoryRequest.GetEntityOrParentId()
-  fullName: CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
-  type: Method
-  summary: "\nID of entity to get history for, or parent entity id if requesting insert rights for an entity that has a parent\n"
-  remarks: 
-  syntax: 
-    content: Integer GetEntityOrParentId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHistoryRequest thing;\nInteger entityOrParentId = thing.GetEntityOrParentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
-  commentId: M:CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
-  id: 'GetRequestForNewRecord()'
-  so.intellisense: NSHistoryRequest.GetRequestForNewRecord
-  langs:
-  - crmscript
-  name: 'GetRequestForNewRecord()'
-  nameWithType: NSHistoryRequest.GetRequestForNewRecord()
-  fullName: CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
-  type: Method
-  summary: "\nAre we requesting insert rights? If true, then EntityorParentId is taken to mean parent ID\n"
-  remarks: 
-  syntax: 
-    content: Bool GetRequestForNewRecord()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSHistoryRequest thing;\nBool requestForNewRecord = thing.GetRequestForNewRecord();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHistoryRequest.#ctor
   commentId: M:CRMScript.NetServer.NSHistoryRequest.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSHistoryRequest
   example: 
+- uid: CRMScript.NetServer.NSHistoryRequest.GetEntityName()
+  commentId: M:CRMScript.NetServer.NSHistoryRequest.GetEntityName()
+  id: 'GetEntityName()'
+  so.intellisense: NSHistoryRequest.GetEntityName
+  langs:
+  - crmscript
+  name: 'GetEntityName()'
+  nameWithType: NSHistoryRequest.GetEntityName()
+  fullName: CRMScript.NetServer.NSHistoryRequest.GetEntityName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetEntityName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of entity to get history for
+  example: 
+  - "\n<pre><code>NSHistoryRequest thing;\nString entityName = thing.GetEntityName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
+  commentId: M:CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
+  id: 'GetEntityOrParentId()'
+  so.intellisense: NSHistoryRequest.GetEntityOrParentId
+  langs:
+  - crmscript
+  name: 'GetEntityOrParentId()'
+  nameWithType: NSHistoryRequest.GetEntityOrParentId()
+  fullName: CRMScript.NetServer.NSHistoryRequest.GetEntityOrParentId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetEntityOrParentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of entity to get history for, or parent entity id if requesting insert rights for an entity that has a parent
+  example: 
+  - "\n<pre><code>NSHistoryRequest thing;\nInteger entityOrParentId = thing.GetEntityOrParentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
+  commentId: M:CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
+  id: 'GetRequestForNewRecord()'
+  so.intellisense: NSHistoryRequest.GetRequestForNewRecord
+  langs:
+  - crmscript
+  name: 'GetRequestForNewRecord()'
+  nameWithType: NSHistoryRequest.GetRequestForNewRecord()
+  fullName: CRMScript.NetServer.NSHistoryRequest.GetRequestForNewRecord()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetRequestForNewRecord()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Are we requesting insert rights? If true, then EntityorParentId is taken to mean parent ID
+  example: 
+  - "\n<pre><code>NSHistoryRequest thing;\nBool requestForNewRecord = thing.GetRequestForNewRecord();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHistoryRequest.SetEntityName(String)
   commentId: M:CRMScript.NetServer.NSHistoryRequest.SetEntityName(String)
   id: 'SetEntityName(String)'
@@ -101,14 +104,14 @@ items:
   nameWithType: NSHistoryRequest.SetEntityName(String)
   fullName: CRMScript.NetServer.NSHistoryRequest.SetEntityName(String)
   type: Method
-  summary: "\nName of entity to get history for\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetEntityName(String entityName)
     parameters:
     - id: entityName
       type: CRMScript.Global.String
-      description: 
+      description: Name of entity to get history for
     return:
       type: CRMScript.Global.Void
   example: 
@@ -123,14 +126,14 @@ items:
   nameWithType: NSHistoryRequest.SetEntityOrParentId(Integer)
   fullName: CRMScript.NetServer.NSHistoryRequest.SetEntityOrParentId(Integer)
   type: Method
-  summary: "\nID of entity to get history for, or parent entity id if requesting insert rights for an entity that has a parent\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetEntityOrParentId(Integer entityOrParentId)
     parameters:
     - id: entityOrParentId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of entity to get history for, or parent entity id if requesting insert rights for an entity that has a parent
     return:
       type: CRMScript.Global.Void
   example: 
@@ -145,14 +148,14 @@ items:
   nameWithType: NSHistoryRequest.SetRequestForNewRecord(Bool)
   fullName: CRMScript.NetServer.NSHistoryRequest.SetRequestForNewRecord(Bool)
   type: Method
-  summary: "\nAre we requesting insert rights? If true, then EntityorParentId is taken to mean parent ID\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetRequestForNewRecord(Bool requestForNewRecord)
     parameters:
     - id: requestForNewRecord
       type: CRMScript.Global.Bool
-      description: 
+      description: Are we requesting insert rights? If true, then EntityorParentId is taken to mean parent ID
     return:
       type: CRMScript.Global.Void
   example: 
