--- a/docs/api-reference/CRMScript.NetServer.NSImportColumnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportColumnInfo.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSImportColumnInfo.#ctor
   - CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
   - CRMScript.NetServer.NSImportColumnInfo.GetLocked()
   - CRMScript.NetServer.NSImportColumnInfo.GetName()
-  - CRMScript.NetServer.NSImportColumnInfo.#ctor
   - CRMScript.NetServer.NSImportColumnInfo.SetDisplayName(String)
   - CRMScript.NetServer.NSImportColumnInfo.SetLocked(Bool)
   - CRMScript.NetServer.NSImportColumnInfo.SetName(String)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
-  commentId: M:CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
-  id: 'GetDisplayName()'
-  so.intellisense: NSImportColumnInfo.GetDisplayName
-  langs:
-  - crmscript
-  name: 'GetDisplayName()'
-  nameWithType: NSImportColumnInfo.GetDisplayName()
-  fullName: CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
-  type: Method
-  summary: "\nDisplay name of the column\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSImportColumnInfo thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSImportColumnInfo.GetLocked()
-  commentId: M:CRMScript.NetServer.NSImportColumnInfo.GetLocked()
-  id: 'GetLocked()'
-  so.intellisense: NSImportColumnInfo.GetLocked
-  langs:
-  - crmscript
-  name: 'GetLocked()'
-  nameWithType: NSImportColumnInfo.GetLocked()
-  fullName: CRMScript.NetServer.NSImportColumnInfo.GetLocked()
-  type: Method
-  summary: "\nIf true disable the option of choose column\n"
-  remarks: 
-  syntax: 
-    content: Bool GetLocked()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSImportColumnInfo thing;\nBool locked = thing.GetLocked();</code></pre>\n"
-- uid: CRMScript.NetServer.NSImportColumnInfo.GetName()
-  commentId: M:CRMScript.NetServer.NSImportColumnInfo.GetName()
-  id: 'GetName()'
-  so.intellisense: NSImportColumnInfo.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSImportColumnInfo.GetName()
-  fullName: CRMScript.NetServer.NSImportColumnInfo.GetName()
-  type: Method
-  summary: "\nName of the column\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSImportColumnInfo thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportColumnInfo.#ctor
   commentId: M:CRMScript.NetServer.NSImportColumnInfo.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSImportColumnInfo
   example: 
+- uid: CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
+  commentId: M:CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
+  id: 'GetDisplayName()'
+  so.intellisense: NSImportColumnInfo.GetDisplayName
+  langs:
+  - crmscript
+  name: 'GetDisplayName()'
+  nameWithType: NSImportColumnInfo.GetDisplayName()
+  fullName: CRMScript.NetServer.NSImportColumnInfo.GetDisplayName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetDisplayName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Display name of the column
+  example: 
+  - "\n<pre><code>NSImportColumnInfo thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSImportColumnInfo.GetLocked()
+  commentId: M:CRMScript.NetServer.NSImportColumnInfo.GetLocked()
+  id: 'GetLocked()'
+  so.intellisense: NSImportColumnInfo.GetLocked
+  langs:
+  - crmscript
+  name: 'GetLocked()'
+  nameWithType: NSImportColumnInfo.GetLocked()
+  fullName: CRMScript.NetServer.NSImportColumnInfo.GetLocked()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetLocked()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true disable the option of choose column
+  example: 
+  - "\n<pre><code>NSImportColumnInfo thing;\nBool locked = thing.GetLocked();</code></pre>\n"
+- uid: CRMScript.NetServer.NSImportColumnInfo.GetName()
+  commentId: M:CRMScript.NetServer.NSImportColumnInfo.GetName()
+  id: 'GetName()'
+  so.intellisense: NSImportColumnInfo.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSImportColumnInfo.GetName()
+  fullName: CRMScript.NetServer.NSImportColumnInfo.GetName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of the column
+  example: 
+  - "\n<pre><code>NSImportColumnInfo thing;\nString name = thing.GetName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportColumnInfo.SetDisplayName(String)
   commentId: M:CRMScript.NetServer.NSImportColumnInfo.SetDisplayName(String)
   id: 'SetDisplayName(String)'
@@ -101,14 +104,14 @@ items:
   nameWithType: NSImportColumnInfo.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSImportColumnInfo.SetDisplayName(String)
   type: Method
-  summary: "\nDisplay name of the column\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
     parameters:
     - id: displayName
       type: CRMScript.Global.String
-      description: 
+      description: Display name of the column
     return:
       type: CRMScript.Global.Void
   example: 
@@ -123,14 +126,14 @@ items:
   nameWithType: NSImportColumnInfo.SetLocked(Bool)
   fullName: CRMScript.NetServer.NSImportColumnInfo.SetLocked(Bool)
   type: Method
-  summary: "\nIf true disable the option of choose column\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetLocked(Bool locked)
     parameters:
     - id: locked
       type: CRMScript.Global.Bool
-      description: 
+      description: If true disable the option of choose column
     return:
       type: CRMScript.Global.Void
   example: 
@@ -145,14 +148,14 @@ items:
   nameWithType: NSImportColumnInfo.SetName(String)
   fullName: CRMScript.NetServer.NSImportColumnInfo.SetName(String)
   type: Method
-  summary: "\nName of the column\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of the column
     return:
       type: CRMScript.Global.Void
   example: 
