--- a/docs/api-reference/CRMScript.NetServer.NSImportErpData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportErpData.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSImportErpData.#ctor
   - CRMScript.NetServer.NSImportErpData.GetColumnInfos()
   - CRMScript.NetServer.NSImportErpData.GetImportLines()
-  - CRMScript.NetServer.NSImportErpData.#ctor
   - CRMScript.NetServer.NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   - CRMScript.NetServer.NSImportErpData.SetImportLines(NSImportLine[])
   name: NSImportErpData
@@ -17,44 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSImportErpData.GetColumnInfos()
-  commentId: M:CRMScript.NetServer.NSImportErpData.GetColumnInfos()
-  id: 'GetColumnInfos()'
-  so.intellisense: NSImportErpData.GetColumnInfos
-  langs:
-  - crmscript
-  name: 'GetColumnInfos()'
-  nameWithType: NSImportErpData.GetColumnInfos()
-  fullName: CRMScript.NetServer.NSImportErpData.GetColumnInfos()
-  type: Method
-  summary: "\nArray of column definitions<p></p>\n<strong>Returns:</strong>NSImportColumnInfo[]<p></p>\n<pre><code>NSImportErpData thing;\nNSImportColumnInfo[] columnInfos = thing.GetColumnInfos();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSImportColumnInfo[] GetColumnInfos()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSImportColumnInfo[]
-  example: 
-  - "\n<pre><code>NSImportErpData thing;\nNSImportColumnInfo[] columnInfos = thing.GetColumnInfos();</code></pre>\n"
-- uid: CRMScript.NetServer.NSImportErpData.GetImportLines()
-  commentId: M:CRMScript.NetServer.NSImportErpData.GetImportLines()
-  id: 'GetImportLines()'
-  so.intellisense: NSImportErpData.GetImportLines
-  langs:
-  - crmscript
-  name: 'GetImportLines()'
-  nameWithType: NSImportErpData.GetImportLines()
-  fullName: CRMScript.NetServer.NSImportErpData.GetImportLines()
-  type: Method
-  summary: "\nAn array of Import lines<p></p>\n<strong>Returns:</strong>NSImportLine[]<p></p>\n<pre><code>NSImportErpData thing;\nNSImportLine[] importLines = thing.GetImportLines();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSImportLine[] GetImportLines()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSImportLine[]
-  example: 
-  - "\n<pre><code>NSImportErpData thing;\nNSImportLine[] importLines = thing.GetImportLines();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportErpData.#ctor
   commentId: M:CRMScript.NetServer.NSImportErpData.#ctor
   id: '#ctor'
@@ -70,6 +32,46 @@ items:
   syntax: 
     content: NSImportErpData
   example: 
+- uid: CRMScript.NetServer.NSImportErpData.GetColumnInfos()
+  commentId: M:CRMScript.NetServer.NSImportErpData.GetColumnInfos()
+  id: 'GetColumnInfos()'
+  so.intellisense: NSImportErpData.GetColumnInfos
+  langs:
+  - crmscript
+  name: 'GetColumnInfos()'
+  nameWithType: NSImportErpData.GetColumnInfos()
+  fullName: CRMScript.NetServer.NSImportErpData.GetColumnInfos()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSImportColumnInfo[] GetColumnInfos()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSImportColumnInfo[]
+      description: Array of column definitions
+  example: 
+  - "\n<pre><code>NSImportErpData thing;\nNSImportColumnInfo[] columnInfos = thing.GetColumnInfos();</code></pre>\n"
+- uid: CRMScript.NetServer.NSImportErpData.GetImportLines()
+  commentId: M:CRMScript.NetServer.NSImportErpData.GetImportLines()
+  id: 'GetImportLines()'
+  so.intellisense: NSImportErpData.GetImportLines
+  langs:
+  - crmscript
+  name: 'GetImportLines()'
+  nameWithType: NSImportErpData.GetImportLines()
+  fullName: CRMScript.NetServer.NSImportErpData.GetImportLines()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSImportLine[] GetImportLines()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSImportLine[]
+      description: An array of Import lines
+  example: 
+  - "\n<pre><code>NSImportErpData thing;\nNSImportLine[] importLines = thing.GetImportLines();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   commentId: M:CRMScript.NetServer.NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   id: 'SetColumnInfos(NSImportColumnInfo[])'
@@ -80,14 +82,14 @@ items:
   nameWithType: NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   fullName: CRMScript.NetServer.NSImportErpData.SetColumnInfos(NSImportColumnInfo[])
   type: Method
-  summary: "\nArray of column definitions\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetColumnInfos(NSImportColumnInfo[] columnInfos)
     parameters:
     - id: columnInfos
       type: CRMScript.NetServer.NSImportColumnInfo[]
-      description: 
+      description: Array of column definitions
     return:
       type: CRMScript.Global.Void
   example: 
@@ -102,14 +104,14 @@ items:
   nameWithType: NSImportErpData.SetImportLines(NSImportLine[])
   fullName: CRMScript.NetServer.NSImportErpData.SetImportLines(NSImportLine[])
   type: Method
-  summary: "\nAn array of Import lines\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetImportLines(NSImportLine[] importLines)
     parameters:
     - id: importLines
       type: CRMScript.NetServer.NSImportLine[]
-      description: 
+      description: An array of Import lines
     return:
       type: CRMScript.Global.Void
   example: 
