--- a/docs/api-reference/CRMScript.NetServer.NSHistory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHistory.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSHistory.#ctor
   - CRMScript.NetServer.NSHistory.GetAssociateId()
   - CRMScript.NetServer.NSHistory.GetHistoryId()
   - CRMScript.NetServer.NSHistory.GetHistoryName()
@@ -13,7 +14,6 @@ items:
   - CRMScript.NetServer.NSHistory.GetItemInfo()
   - CRMScript.NetServer.NSHistory.GetName()
   - CRMScript.NetServer.NSHistory.GetRank()
-  - CRMScript.NetServer.NSHistory.#ctor
   - CRMScript.NetServer.NSHistory.SetAssociateId(Integer)
   - CRMScript.NetServer.NSHistory.SetHistoryId(Integer)
   - CRMScript.NetServer.NSHistory.SetHistoryName(String)
@@ -27,139 +27,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSHistory.GetAssociateId()
-  commentId: M:CRMScript.NetServer.NSHistory.GetAssociateId()
-  id: 'GetAssociateId()'
-  so.intellisense: NSHistory.GetAssociateId
-  langs:
-  - crmscript
-  name: 'GetAssociateId()'
-  nameWithType: NSHistory.GetAssociateId()
-  fullName: CRMScript.NetServer.NSHistory.GetAssociateId()
-  type: Method
-  summary: "\nOwner of history list\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAssociateId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHistory thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistory.GetHistoryId()
-  commentId: M:CRMScript.NetServer.NSHistory.GetHistoryId()
-  id: 'GetHistoryId()'
-  so.intellisense: NSHistory.GetHistoryId
-  langs:
-  - crmscript
-  name: 'GetHistoryId()'
-  nameWithType: NSHistory.GetHistoryId()
-  fullName: CRMScript.NetServer.NSHistory.GetHistoryId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetHistoryId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHistory thing;\nInteger historyId = thing.GetHistoryId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistory.GetHistoryName()
-  commentId: M:CRMScript.NetServer.NSHistory.GetHistoryName()
-  id: 'GetHistoryName()'
-  so.intellisense: NSHistory.GetHistoryName
-  langs:
-  - crmscript
-  name: 'GetHistoryName()'
-  nameWithType: NSHistory.GetHistoryName()
-  fullName: CRMScript.NetServer.NSHistory.GetHistoryName()
-  type: Method
-  summary: "\nThe name of the history list, for instance contact. Represents the history table's TableId field\n"
-  remarks: 
-  syntax: 
-    content: String GetHistoryName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSHistory thing;\nString historyName = thing.GetHistoryName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistory.GetId()
-  commentId: M:CRMScript.NetServer.NSHistory.GetId()
-  id: 'GetId()'
-  so.intellisense: NSHistory.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSHistory.GetId()
-  fullName: CRMScript.NetServer.NSHistory.GetId()
-  type: Method
-  summary: "\nID of the history item, for instance a contact id. Represents the history table's RecordId field, if the item is based on a history table record\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHistory thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistory.GetItemInfo()
-  commentId: M:CRMScript.NetServer.NSHistory.GetItemInfo()
-  id: 'GetItemInfo()'
-  so.intellisense: NSHistory.GetItemInfo
-  langs:
-  - crmscript
-  name: 'GetItemInfo()'
-  nameWithType: NSHistory.GetItemInfo()
-  fullName: CRMScript.NetServer.NSHistory.GetItemInfo()
-  type: Method
-  summary: "\nExtra information on the history item, e.g. The Associate Type for an associate or other relevant info.\n"
-  remarks: 
-  syntax: 
-    content: String GetItemInfo()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSHistory thing;\nString itemInfo = thing.GetItemInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistory.GetName()
-  commentId: M:CRMScript.NetServer.NSHistory.GetName()
-  id: 'GetName()'
-  so.intellisense: NSHistory.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSHistory.GetName()
-  fullName: CRMScript.NetServer.NSHistory.GetName()
-  type: Method
-  summary: "\nName of the history item, for instance contact name\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSHistory thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSHistory.GetRank()
-  commentId: M:CRMScript.NetServer.NSHistory.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSHistory.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSHistory.GetRank()
-  fullName: CRMScript.NetServer.NSHistory.GetRank()
-  type: Method
-  summary: "\nSort order, indexed so it can used for sorting in the query\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSHistory thing;\nInteger rank = thing.GetRank();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHistory.#ctor
   commentId: M:CRMScript.NetServer.NSHistory.#ctor
   id: '#ctor'
@@ -175,6 +42,146 @@ items:
   syntax: 
     content: NSHistory
   example: 
+- uid: CRMScript.NetServer.NSHistory.GetAssociateId()
+  commentId: M:CRMScript.NetServer.NSHistory.GetAssociateId()
+  id: 'GetAssociateId()'
+  so.intellisense: NSHistory.GetAssociateId
+  langs:
+  - crmscript
+  name: 'GetAssociateId()'
+  nameWithType: NSHistory.GetAssociateId()
+  fullName: CRMScript.NetServer.NSHistory.GetAssociateId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetAssociateId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Owner of history list
+  example: 
+  - "\n<pre><code>NSHistory thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistory.GetHistoryId()
+  commentId: M:CRMScript.NetServer.NSHistory.GetHistoryId()
+  id: 'GetHistoryId()'
+  so.intellisense: NSHistory.GetHistoryId
+  langs:
+  - crmscript
+  name: 'GetHistoryId()'
+  nameWithType: NSHistory.GetHistoryId()
+  fullName: CRMScript.NetServer.NSHistory.GetHistoryId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetHistoryId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSHistory thing;\nInteger historyId = thing.GetHistoryId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistory.GetHistoryName()
+  commentId: M:CRMScript.NetServer.NSHistory.GetHistoryName()
+  id: 'GetHistoryName()'
+  so.intellisense: NSHistory.GetHistoryName
+  langs:
+  - crmscript
+  name: 'GetHistoryName()'
+  nameWithType: NSHistory.GetHistoryName()
+  fullName: CRMScript.NetServer.NSHistory.GetHistoryName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetHistoryName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the history list, for instance contact. Represents the history table's TableId field
+  example: 
+  - "\n<pre><code>NSHistory thing;\nString historyName = thing.GetHistoryName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistory.GetId()
+  commentId: M:CRMScript.NetServer.NSHistory.GetId()
+  id: 'GetId()'
+  so.intellisense: NSHistory.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSHistory.GetId()
+  fullName: CRMScript.NetServer.NSHistory.GetId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of the history item, for instance a contact id. Represents the history table's RecordId field, if the item is based on a history table record
+  example: 
+  - "\n<pre><code>NSHistory thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistory.GetItemInfo()
+  commentId: M:CRMScript.NetServer.NSHistory.GetItemInfo()
+  id: 'GetItemInfo()'
+  so.intellisense: NSHistory.GetItemInfo
+  langs:
+  - crmscript
+  name: 'GetItemInfo()'
+  nameWithType: NSHistory.GetItemInfo()
+  fullName: CRMScript.NetServer.NSHistory.GetItemInfo()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetItemInfo()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Extra information on the history item, e.g. The Associate Type for an associate or other relevant info.
+  example: 
+  - "\n<pre><code>NSHistory thing;\nString itemInfo = thing.GetItemInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistory.GetName()
+  commentId: M:CRMScript.NetServer.NSHistory.GetName()
+  id: 'GetName()'
+  so.intellisense: NSHistory.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSHistory.GetName()
+  fullName: CRMScript.NetServer.NSHistory.GetName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of the history item, for instance contact name
+  example: 
+  - "\n<pre><code>NSHistory thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSHistory.GetRank()
+  commentId: M:CRMScript.NetServer.NSHistory.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSHistory.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSHistory.GetRank()
+  fullName: CRMScript.NetServer.NSHistory.GetRank()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Sort order, indexed so it can used for sorting in the query
+  example: 
+  - "\n<pre><code>NSHistory thing;\nInteger rank = thing.GetRank();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHistory.SetAssociateId(Integer)
   commentId: M:CRMScript.NetServer.NSHistory.SetAssociateId(Integer)
   id: 'SetAssociateId(Integer)'
@@ -185,14 +192,14 @@ items:
   nameWithType: NSHistory.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetAssociateId(Integer)
   type: Method
-  summary: "\nOwner of history list\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
     parameters:
     - id: associateId
       type: CRMScript.Global.Integer
-      description: 
+      description: Owner of history list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -207,14 +214,14 @@ items:
   nameWithType: NSHistory.SetHistoryId(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetHistoryId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetHistoryId(Integer historyId)
     parameters:
     - id: historyId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -229,14 +236,14 @@ items:
   nameWithType: NSHistory.SetHistoryName(String)
   fullName: CRMScript.NetServer.NSHistory.SetHistoryName(String)
   type: Method
-  summary: "\nThe name of the history list, for instance contact. Represents the history table's TableId field\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetHistoryName(String historyName)
     parameters:
     - id: historyName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the history list, for instance contact. Represents the history table's TableId field
     return:
       type: CRMScript.Global.Void
   example: 
@@ -251,14 +258,14 @@ items:
   nameWithType: NSHistory.SetId(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetId(Integer)
   type: Method
-  summary: "\nID of the history item, for instance a contact id. Represents the history table's RecordId field, if the item is based on a history table record\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of the history item, for instance a contact id. Represents the history table's RecordId field, if the item is based on a history table record
     return:
       type: CRMScript.Global.Void
   example: 
@@ -273,14 +280,14 @@ items:
   nameWithType: NSHistory.SetItemInfo(String)
   fullName: CRMScript.NetServer.NSHistory.SetItemInfo(String)
   type: Method
-  summary: "\nExtra information on the history item, e.g. The Associate Type for an associate or other relevant info.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetItemInfo(String itemInfo)
     parameters:
     - id: itemInfo
       type: CRMScript.Global.String
-      description: 
+      description: Extra information on the history item, e.g. The Associate Type for an associate or other relevant info.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -295,14 +302,14 @@ items:
   nameWithType: NSHistory.SetName(String)
   fullName: CRMScript.NetServer.NSHistory.SetName(String)
   type: Method
-  summary: "\nName of the history item, for instance contact name\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of the history item, for instance contact name
     return:
       type: CRMScript.Global.Void
   example: 
@@ -317,14 +324,14 @@ items:
   nameWithType: NSHistory.SetRank(Integer)
   fullName: CRMScript.NetServer.NSHistory.SetRank(Integer)
   type: Method
-  summary: "\nSort order, indexed so it can used for sorting in the query\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Sort order, indexed so it can used for sorting in the query
     return:
       type: CRMScript.Global.Void
   example: 
