--- a/docs/api-reference/CRMScript.NetServer.NSImage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImage.yml
@@ -6,32 +6,14 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSImage.GetImage()
   - CRMScript.NetServer.NSImage.#ctor
+  - CRMScript.NetServer.NSImage.GetImage()
   - CRMScript.NetServer.NSImage.SetImage(Byte[])
   name: NSImage
   nameWithType: NSImage
   fullName: CRMScript.NetServer.NSImage
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSImage.GetImage()
-  commentId: M:CRMScript.NetServer.NSImage.GetImage()
-  id: 'GetImage()'
-  so.intellisense: NSImage.GetImage
-  langs:
-  - crmscript
-  name: 'GetImage()'
-  nameWithType: NSImage.GetImage()
-  fullName: CRMScript.NetServer.NSImage.GetImage()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetImage()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSImage.#ctor
   commentId: M:CRMScript.NetServer.NSImage.#ctor
@@ -48,6 +30,24 @@ items:
   syntax: 
     content: NSImage
   example: 
+- uid: CRMScript.NetServer.NSImage.GetImage()
+  commentId: M:CRMScript.NetServer.NSImage.GetImage()
+  id: 'GetImage()'
+  so.intellisense: NSImage.GetImage
+  langs:
+  - crmscript
+  name: 'GetImage()'
+  nameWithType: NSImage.GetImage()
+  fullName: CRMScript.NetServer.NSImage.GetImage()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Byte[] GetImage()
+    parameters: []
+    return:
+      type: CRMScript.Global.Byte[]
+  example: 
 - uid: CRMScript.NetServer.NSImage.SetImage(Byte[])
   commentId: M:CRMScript.NetServer.NSImage.SetImage(Byte[])
   id: 'SetImage(Byte[])'
@@ -61,9 +61,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetImage(Byte[] p_0)
+    content: Void SetImage(Byte[] image)
     parameters:
-    - id: p_0
+    - id: image
       type: CRMScript.Global.Byte[]
       description: 
     return:
