--- a/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSImportAgent.CreateDefaultImportLine(Integer)
-  - CRMScript.NetServer.NSImportAgent.CreateErpImportData(String[],Integer,Integer)
   - CRMScript.NetServer.NSImportAgent.#ctor
+  - CRMScript.NetServer.NSImportAgent.CreateDefaultImportLine(Integer)
+  - CRMScript.NetServer.NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
   - CRMScript.NetServer.NSImportAgent.PreviewImport(NSImportLine[],String[],String,String)
   - CRMScript.NetServer.NSImportAgent.SaveImport(NSImportLine[],String[],Bool,String,String)
   name: NSImportAgent
@@ -16,6 +16,22 @@ items:
   fullName: CRMScript.NetServer.NSImportAgent
   type: Class
   summary: "\nThis agent can be used to import data into the system.\n"
+  example: 
+  - "\n<pre><code>NSImportAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSImportAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSImportAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSImportAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSImportAgent.#ctor
+  fullName: CRMScript.NetServer.NSImportAgent.#ctor
+  type: Constructor
+  summary: "\nThis agent can be used to import data into the system.\n"
+  remarks: 
+  syntax: 
+    content: NSImportAgent
   example: 
   - "\n<pre><code>NSImportAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportAgent.CreateDefaultImportLine(Integer)
@@ -40,21 +56,24 @@ items:
       type: CRMScript.NetServer.NSImportLine
   example: 
   - "\n<pre><code>NSImportAgent agent;\nInteger countColumns;\nNSImportLine res = agent.CreateDefaultImportLine(countColumns);</code></pre>\n"
-- uid: CRMScript.NetServer.NSImportAgent.CreateErpImportData(String[],Integer,Integer)
-  commentId: M:CRMScript.NetServer.NSImportAgent.CreateErpImportData(String[],Integer,Integer)
-  id: 'CreateErpImportData(String[],Integer,Integer)'
+- uid: CRMScript.NetServer.NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
+  commentId: M:CRMScript.NetServer.NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
+  id: 'CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)'
   so.intellisense: NSImportAgent.CreateErpImportData
   langs:
   - crmscript
-  name: 'CreateErpImportData(String[],Integer,Integer)'
-  nameWithType: NSImportAgent.CreateErpImportData(String[],Integer,Integer)
-  fullName: CRMScript.NetServer.NSImportAgent.CreateErpImportData(String[],Integer,Integer)
+  name: 'CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)'
+  nameWithType: NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
+  fullName: CRMScript.NetServer.NSImportAgent.CreateErpImportData(NSArchiveRestrictionInfo[],String[],Integer,Integer)
   type: Method
-  summary: "\nPopulates the ImportLines and columnDefs basedfrom erp system<p></p>\n<ul><li><strong>Restriction</strong>Archive restrictions.</li><li><strong>columns</strong>Columns.</li><li><strong>connectionId</strong>Connection id for Erp system</li><li><strong>erpActorType</strong>Erp Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul>\n"
+  summary: "\nPopulates the ImportLines and columnDefs based from erp system<p></p>\n<ul><li><strong</li><li><strong>columns</strong>Columns.</li><li><strong>connectionId</strong>Connection id for Erp system</li><li><strong>erpActorType</strong>Erp Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Customer</li><li>Enum: 2 = Supplier</li><li>Enum: 3 = Partner</li><li>Enum: 4 = Person</li><li>Enum: 5 = Project</li><li>Enum: 6 = Employee</li><li>Enum: 7 = Sale</li></ul>\n"
   remarks: 
   syntax: 
     content: NSImportErpData CreateErpImportData(NSArchiveRestrictionInfo[] restriction, String[] columns, Integer connectionId, Integer erpActorType)
     parameters:
+    - id: restriction
+      type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
+      description: Archive restrictions.
     - id: columns
       type: CRMScript.Global.String[]
       description: 
@@ -68,22 +87,6 @@ items:
       type: CRMScript.NetServer.NSImportErpData
   example: 
   - "\n<pre><code>NSImportAgent agent;\nNSArchiveRestrictionInfo[] restriction;\nString[] columns;\nInteger connectionId;\nInteger erpActorType;\nNSImportErpData res = agent.CreateErpImportData(restriction, columns, connectionId, erpActorType);</code></pre>\n"
-- uid: CRMScript.NetServer.NSImportAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSImportAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSImportAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSImportAgent.#ctor
-  fullName: CRMScript.NetServer.NSImportAgent.#ctor
-  type: Constructor
-  summary: "\nThis agent can be used to import data into the system.\n"
-  remarks: 
-  syntax: 
-    content: NSImportAgent
-  example: 
-  - "\n<pre><code>NSImportAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportAgent.PreviewImport(NSImportLine[],String[],String,String)
   commentId: M:CRMScript.NetServer.NSImportAgent.PreviewImport(NSImportLine[],String[],String,String)
   id: 'PreviewImport(NSImportLine[],String[],String,String)'
@@ -94,7 +97,7 @@ items:
   nameWithType: NSImportAgent.PreviewImport(NSImportLine[],String[],String,String)
   fullName: CRMScript.NetServer.NSImportAgent.PreviewImport(NSImportLine[],String[],String,String)
   type: Method
-  summary: "\nPreview the import\n"
+  summary: "\nPreviews the import\n"
   remarks: 
   syntax: 
     content: NSImportLine[] PreviewImport(NSImportLine[] importLines, String[] columnDefinition, String culture, String context)
@@ -125,7 +128,7 @@ items:
   nameWithType: NSImportAgent.SaveImport(NSImportLine[],String[],Bool,String,String)
   fullName: CRMScript.NetServer.NSImportAgent.SaveImport(NSImportLine[],String[],Bool,String,String)
   type: Method
-  summary: "\nDo the actual import\n"
+  summary: "\nDoes the actual import\n"
   remarks: 
   syntax: 
     content: Integer[] SaveImport(NSImportLine[] importLines, String[] columnDefinition, Bool createSelection, String culture, String context)
