--- a/docs/api-reference/CRMScript.NetServer.NSIncomingMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSIncomingMessage.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSIncomingMessage.#ctor
   - CRMScript.NetServer.NSIncomingMessage.GetContent()
   - CRMScript.NetServer.NSIncomingMessage.GetFormat()
   - CRMScript.NetServer.NSIncomingMessage.GetFrom()
   - CRMScript.NetServer.NSIncomingMessage.GetPlugin()
   - CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
   - CRMScript.NetServer.NSIncomingMessage.GetTo()
-  - CRMScript.NetServer.NSIncomingMessage.#ctor
   - CRMScript.NetServer.NSIncomingMessage.SetContent(String)
   - CRMScript.NetServer.NSIncomingMessage.SetFormat(String)
   - CRMScript.NetServer.NSIncomingMessage.SetFrom(String)
@@ -25,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSIncomingMessage.GetContent()
-  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetContent()
-  id: 'GetContent()'
-  so.intellisense: NSIncomingMessage.GetContent
-  langs:
-  - crmscript
-  name: 'GetContent()'
-  nameWithType: NSIncomingMessage.GetContent()
-  fullName: CRMScript.NetServer.NSIncomingMessage.GetContent()
-  type: Method
-  summary: "\nContent, or body, of the message.\n"
-  remarks: 
-  syntax: 
-    content: String GetContent()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSIncomingMessage thing;\nString content = thing.GetContent();</code></pre>\n"
-- uid: CRMScript.NetServer.NSIncomingMessage.GetFormat()
-  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetFormat()
-  id: 'GetFormat()'
-  so.intellisense: NSIncomingMessage.GetFormat
-  langs:
-  - crmscript
-  name: 'GetFormat()'
-  nameWithType: NSIncomingMessage.GetFormat()
-  fullName: CRMScript.NetServer.NSIncomingMessage.GetFormat()
-  type: Method
-  summary: "\nFormat of the content\n"
-  remarks: 
-  syntax: 
-    content: String GetFormat()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSIncomingMessage thing;\nString format = thing.GetFormat();</code></pre>\n"
-- uid: CRMScript.NetServer.NSIncomingMessage.GetFrom()
-  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetFrom()
-  id: 'GetFrom()'
-  so.intellisense: NSIncomingMessage.GetFrom
-  langs:
-  - crmscript
-  name: 'GetFrom()'
-  nameWithType: NSIncomingMessage.GetFrom()
-  fullName: CRMScript.NetServer.NSIncomingMessage.GetFrom()
-  type: Method
-  summary: "\nWho the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.\n"
-  remarks: 
-  syntax: 
-    content: String GetFrom()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSIncomingMessage thing;\nString from = thing.GetFrom();</code></pre>\n"
-- uid: CRMScript.NetServer.NSIncomingMessage.GetPlugin()
-  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetPlugin()
-  id: 'GetPlugin()'
-  so.intellisense: NSIncomingMessage.GetPlugin
-  langs:
-  - crmscript
-  name: 'GetPlugin()'
-  nameWithType: NSIncomingMessage.GetPlugin()
-  fullName: CRMScript.NetServer.NSIncomingMessage.GetPlugin()
-  type: Method
-  summary: "\nName of plugin\n"
-  remarks: 
-  syntax: 
-    content: String GetPlugin()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSIncomingMessage thing;\nString plugin = thing.GetPlugin();</code></pre>\n"
-- uid: CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
-  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
-  id: 'GetSessionKey()'
-  so.intellisense: NSIncomingMessage.GetSessionKey
-  langs:
-  - crmscript
-  name: 'GetSessionKey()'
-  nameWithType: NSIncomingMessage.GetSessionKey()
-  fullName: CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
-  type: Method
-  summary: "\nSession key used for threading.\n"
-  remarks: 
-  syntax: 
-    content: String GetSessionKey()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSIncomingMessage thing;\nString sessionKey = thing.GetSessionKey();</code></pre>\n"
-- uid: CRMScript.NetServer.NSIncomingMessage.GetTo()
-  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetTo()
-  id: 'GetTo()'
-  so.intellisense: NSIncomingMessage.GetTo
-  langs:
-  - crmscript
-  name: 'GetTo()'
-  nameWithType: NSIncomingMessage.GetTo()
-  fullName: CRMScript.NetServer.NSIncomingMessage.GetTo()
-  type: Method
-  summary: "\nAddress of the recipient. This can be in the form of phone number or email.\n"
-  remarks: 
-  syntax: 
-    content: String GetTo()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSIncomingMessage thing;\nString to = thing.GetTo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSIncomingMessage.#ctor
   commentId: M:CRMScript.NetServer.NSIncomingMessage.#ctor
   id: '#ctor'
@@ -154,6 +40,126 @@ items:
   syntax: 
     content: NSIncomingMessage
   example: 
+- uid: CRMScript.NetServer.NSIncomingMessage.GetContent()
+  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetContent()
+  id: 'GetContent()'
+  so.intellisense: NSIncomingMessage.GetContent
+  langs:
+  - crmscript
+  name: 'GetContent()'
+  nameWithType: NSIncomingMessage.GetContent()
+  fullName: CRMScript.NetServer.NSIncomingMessage.GetContent()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetContent()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Content, or body, of the message.
+  example: 
+  - "\n<pre><code>NSIncomingMessage thing;\nString content = thing.GetContent();</code></pre>\n"
+- uid: CRMScript.NetServer.NSIncomingMessage.GetFormat()
+  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetFormat()
+  id: 'GetFormat()'
+  so.intellisense: NSIncomingMessage.GetFormat
+  langs:
+  - crmscript
+  name: 'GetFormat()'
+  nameWithType: NSIncomingMessage.GetFormat()
+  fullName: CRMScript.NetServer.NSIncomingMessage.GetFormat()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetFormat()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Format of the content
+  example: 
+  - "\n<pre><code>NSIncomingMessage thing;\nString format = thing.GetFormat();</code></pre>\n"
+- uid: CRMScript.NetServer.NSIncomingMessage.GetFrom()
+  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetFrom()
+  id: 'GetFrom()'
+  so.intellisense: NSIncomingMessage.GetFrom
+  langs:
+  - crmscript
+  name: 'GetFrom()'
+  nameWithType: NSIncomingMessage.GetFrom()
+  fullName: CRMScript.NetServer.NSIncomingMessage.GetFrom()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetFrom()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Who the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.
+  example: 
+  - "\n<pre><code>NSIncomingMessage thing;\nString from = thing.GetFrom();</code></pre>\n"
+- uid: CRMScript.NetServer.NSIncomingMessage.GetPlugin()
+  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetPlugin()
+  id: 'GetPlugin()'
+  so.intellisense: NSIncomingMessage.GetPlugin
+  langs:
+  - crmscript
+  name: 'GetPlugin()'
+  nameWithType: NSIncomingMessage.GetPlugin()
+  fullName: CRMScript.NetServer.NSIncomingMessage.GetPlugin()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetPlugin()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of plugin
+  example: 
+  - "\n<pre><code>NSIncomingMessage thing;\nString plugin = thing.GetPlugin();</code></pre>\n"
+- uid: CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
+  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
+  id: 'GetSessionKey()'
+  so.intellisense: NSIncomingMessage.GetSessionKey
+  langs:
+  - crmscript
+  name: 'GetSessionKey()'
+  nameWithType: NSIncomingMessage.GetSessionKey()
+  fullName: CRMScript.NetServer.NSIncomingMessage.GetSessionKey()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetSessionKey()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Session key used for threading.
+  example: 
+  - "\n<pre><code>NSIncomingMessage thing;\nString sessionKey = thing.GetSessionKey();</code></pre>\n"
+- uid: CRMScript.NetServer.NSIncomingMessage.GetTo()
+  commentId: M:CRMScript.NetServer.NSIncomingMessage.GetTo()
+  id: 'GetTo()'
+  so.intellisense: NSIncomingMessage.GetTo
+  langs:
+  - crmscript
+  name: 'GetTo()'
+  nameWithType: NSIncomingMessage.GetTo()
+  fullName: CRMScript.NetServer.NSIncomingMessage.GetTo()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTo()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Address of the recipient. This can be in the form of phone number or email.
+  example: 
+  - "\n<pre><code>NSIncomingMessage thing;\nString to = thing.GetTo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSIncomingMessage.SetContent(String)
   commentId: M:CRMScript.NetServer.NSIncomingMessage.SetContent(String)
   id: 'SetContent(String)'
@@ -164,14 +170,14 @@ items:
   nameWithType: NSIncomingMessage.SetContent(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetContent(String)
   type: Method
-  summary: "\nContent, or body, of the message.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetContent(String content)
     parameters:
     - id: content
       type: CRMScript.Global.String
-      description: 
+      description: Content, or body, of the message.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +192,14 @@ items:
   nameWithType: NSIncomingMessage.SetFormat(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetFormat(String)
   type: Method
-  summary: "\nFormat of the content\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFormat(String format)
     parameters:
     - id: format
       type: CRMScript.Global.String
-      description: 
+      description: Format of the content
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSIncomingMessage.SetFrom(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetFrom(String)
   type: Method
-  summary: "\nWho the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFrom(String from)
     parameters:
     - id: from
       type: CRMScript.Global.String
-      description: 
+      description: Who the message is from.  This can vary from provider to provider and can for SMS typically be a phone number or a string.  This is mail address on the form of an e-mail.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSIncomingMessage.SetPlugin(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetPlugin(String)
   type: Method
-  summary: "\nName of plugin\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetPlugin(String plugin)
     parameters:
     - id: plugin
       type: CRMScript.Global.String
-      description: 
+      description: Name of plugin
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSIncomingMessage.SetSessionKey(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetSessionKey(String)
   type: Method
-  summary: "\nSession key used for threading.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetSessionKey(String sessionKey)
     parameters:
     - id: sessionKey
       type: CRMScript.Global.String
-      description: 
+      description: Session key used for threading.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSIncomingMessage.SetTo(String)
   fullName: CRMScript.NetServer.NSIncomingMessage.SetTo(String)
   type: Method
-  summary: "\nAddress of the recipient. This can be in the form of phone number or email.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTo(String to)
     parameters:
     - id: to
       type: CRMScript.Global.String
-      description: 
+      description: Address of the recipient. This can be in the form of phone number or email.
     return:
       type: CRMScript.Global.Void
   example: 
