--- a/docs/api-reference/CRMScript.NetServer.NSKbCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSKbCategory.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSKbCategory.#ctor
   - CRMScript.NetServer.NSKbCategory.GetDescription()
   - CRMScript.NetServer.NSKbCategory.GetFullname()
   - CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
   - CRMScript.NetServer.NSKbCategory.GetName()
   - CRMScript.NetServer.NSKbCategory.GetParentId()
   - CRMScript.NetServer.NSKbCategory.GetSortOrder()
-  - CRMScript.NetServer.NSKbCategory.#ctor
   - CRMScript.NetServer.NSKbCategory.SetDescription(String)
   - CRMScript.NetServer.NSKbCategory.SetFullname(String)
   - CRMScript.NetServer.NSKbCategory.SetKbCategoryId(Integer)
@@ -25,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSKbCategory.GetDescription()
-  commentId: M:CRMScript.NetServer.NSKbCategory.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSKbCategory.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSKbCategory.GetDescription()
-  fullName: CRMScript.NetServer.NSKbCategory.GetDescription()
-  type: Method
-  summary: "\nThe description of this category.\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSKbCategory thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSKbCategory.GetFullname()
-  commentId: M:CRMScript.NetServer.NSKbCategory.GetFullname()
-  id: 'GetFullname()'
-  so.intellisense: NSKbCategory.GetFullname
-  langs:
-  - crmscript
-  name: 'GetFullname()'
-  nameWithType: NSKbCategory.GetFullname()
-  fullName: CRMScript.NetServer.NSKbCategory.GetFullname()
-  type: Method
-  summary: "\nThe full name of this category, i.e. Foo/bar/test.\n"
-  remarks: 
-  syntax: 
-    content: String GetFullname()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSKbCategory thing;\nString fullname = thing.GetFullname();</code></pre>\n"
-- uid: CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
-  commentId: M:CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
-  id: 'GetKbCategoryId()'
-  so.intellisense: NSKbCategory.GetKbCategoryId
-  langs:
-  - crmscript
-  name: 'GetKbCategoryId()'
-  nameWithType: NSKbCategory.GetKbCategoryId()
-  fullName: CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
-  type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetKbCategoryId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSKbCategory thing;\nInteger kbCategoryId = thing.GetKbCategoryId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSKbCategory.GetName()
-  commentId: M:CRMScript.NetServer.NSKbCategory.GetName()
-  id: 'GetName()'
-  so.intellisense: NSKbCategory.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSKbCategory.GetName()
-  fullName: CRMScript.NetServer.NSKbCategory.GetName()
-  type: Method
-  summary: "\nThe name of this category.\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSKbCategory thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSKbCategory.GetParentId()
-  commentId: M:CRMScript.NetServer.NSKbCategory.GetParentId()
-  id: 'GetParentId()'
-  so.intellisense: NSKbCategory.GetParentId
-  langs:
-  - crmscript
-  name: 'GetParentId()'
-  nameWithType: NSKbCategory.GetParentId()
-  fullName: CRMScript.NetServer.NSKbCategory.GetParentId()
-  type: Method
-  summary: "\nThis entry contains a reference to the parent category. NULL or -1 if this is a toplevel category.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetParentId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSKbCategory thing;\nInteger parentId = thing.GetParentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSKbCategory.GetSortOrder()
-  commentId: M:CRMScript.NetServer.NSKbCategory.GetSortOrder()
-  id: 'GetSortOrder()'
-  so.intellisense: NSKbCategory.GetSortOrder
-  langs:
-  - crmscript
-  name: 'GetSortOrder()'
-  nameWithType: NSKbCategory.GetSortOrder()
-  fullName: CRMScript.NetServer.NSKbCategory.GetSortOrder()
-  type: Method
-  summary: "\nA strictly ascending number used for sorting categories when they are listed.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetSortOrder()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSKbCategory thing;\nInteger sortOrder = thing.GetSortOrder();</code></pre>\n"
 - uid: CRMScript.NetServer.NSKbCategory.#ctor
   commentId: M:CRMScript.NetServer.NSKbCategory.#ctor
   id: '#ctor'
@@ -154,6 +40,126 @@ items:
   syntax: 
     content: NSKbCategory
   example: 
+- uid: CRMScript.NetServer.NSKbCategory.GetDescription()
+  commentId: M:CRMScript.NetServer.NSKbCategory.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSKbCategory.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSKbCategory.GetDescription()
+  fullName: CRMScript.NetServer.NSKbCategory.GetDescription()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The description of this category.
+  example: 
+  - "\n<pre><code>NSKbCategory thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSKbCategory.GetFullname()
+  commentId: M:CRMScript.NetServer.NSKbCategory.GetFullname()
+  id: 'GetFullname()'
+  so.intellisense: NSKbCategory.GetFullname
+  langs:
+  - crmscript
+  name: 'GetFullname()'
+  nameWithType: NSKbCategory.GetFullname()
+  fullName: CRMScript.NetServer.NSKbCategory.GetFullname()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetFullname()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The full name of this category, i.e. Foo/bar/test.
+  example: 
+  - "\n<pre><code>NSKbCategory thing;\nString fullname = thing.GetFullname();</code></pre>\n"
+- uid: CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
+  commentId: M:CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
+  id: 'GetKbCategoryId()'
+  so.intellisense: NSKbCategory.GetKbCategoryId
+  langs:
+  - crmscript
+  name: 'GetKbCategoryId()'
+  nameWithType: NSKbCategory.GetKbCategoryId()
+  fullName: CRMScript.NetServer.NSKbCategory.GetKbCategoryId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetKbCategoryId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
+  example: 
+  - "\n<pre><code>NSKbCategory thing;\nInteger kbCategoryId = thing.GetKbCategoryId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSKbCategory.GetName()
+  commentId: M:CRMScript.NetServer.NSKbCategory.GetName()
+  id: 'GetName()'
+  so.intellisense: NSKbCategory.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSKbCategory.GetName()
+  fullName: CRMScript.NetServer.NSKbCategory.GetName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of this category.
+  example: 
+  - "\n<pre><code>NSKbCategory thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSKbCategory.GetParentId()
+  commentId: M:CRMScript.NetServer.NSKbCategory.GetParentId()
+  id: 'GetParentId()'
+  so.intellisense: NSKbCategory.GetParentId
+  langs:
+  - crmscript
+  name: 'GetParentId()'
+  nameWithType: NSKbCategory.GetParentId()
+  fullName: CRMScript.NetServer.NSKbCategory.GetParentId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetParentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: This entry contains a reference to the parent category. NULL or -1 if this is a top-level category.
+  example: 
+  - "\n<pre><code>NSKbCategory thing;\nInteger parentId = thing.GetParentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSKbCategory.GetSortOrder()
+  commentId: M:CRMScript.NetServer.NSKbCategory.GetSortOrder()
+  id: 'GetSortOrder()'
+  so.intellisense: NSKbCategory.GetSortOrder
+  langs:
+  - crmscript
+  name: 'GetSortOrder()'
+  nameWithType: NSKbCategory.GetSortOrder()
+  fullName: CRMScript.NetServer.NSKbCategory.GetSortOrder()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetSortOrder()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer'
+      description: A strictly ascending number used for sorting categories when they are listed.
+  example: 
+  - "\n<pre><code>NSKbCategory thing;\nInteger sortOrder = thing.GetSortOrder();</code></pre>\n"
 - uid: CRMScript.NetServer.NSKbCategory.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSKbCategory.SetDescription(String)
   id: 'SetDescription(String)'
@@ -164,14 +170,14 @@ items:
   nameWithType: NSKbCategory.SetDescription(String)
   fullName: CRMScript.NetServer.NSKbCategory.SetDescription(String)
   type: Method
-  summary: "\nThe description of this category.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: The description of this category.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -186,14 +192,14 @@ items:
   nameWithType: NSKbCategory.SetFullname(String)
   fullName: CRMScript.NetServer.NSKbCategory.SetFullname(String)
   type: Method
-  summary: "\nThe full name of this category, i.e. Foo/bar/test.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFullname(String fullname)
     parameters:
     - id: fullname
       type: CRMScript.Global.String
-      description: 
+      description: The full name of this category, i.e. Foo/bar/test.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -208,14 +214,14 @@ items:
   nameWithType: NSKbCategory.SetKbCategoryId(Integer)
   fullName: CRMScript.NetServer.NSKbCategory.SetKbCategoryId(Integer)
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetKbCategoryId(Integer kbCategoryId)
     parameters:
     - id: kbCategoryId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key (auto-incremented)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -230,14 +236,14 @@ items:
   nameWithType: NSKbCategory.SetName(String)
   fullName: CRMScript.NetServer.NSKbCategory.SetName(String)
   type: Method
-  summary: "\nThe name of this category.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of this category.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,14 +258,14 @@ items:
   nameWithType: NSKbCategory.SetParentId(Integer)
   fullName: CRMScript.NetServer.NSKbCategory.SetParentId(Integer)
   type: Method
-  summary: "\nThis entry contains a reference to the parent category. NULL or -1 if this is a toplevel category.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetParentId(Integer parentId)
     parameters:
     - id: parentId
       type: CRMScript.Global.Integer
-      description: 
+      description: This entry contains a reference to the parent category. NULL or -1 if this is a top-level category.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -274,14 +280,14 @@ items:
   nameWithType: NSKbCategory.SetSortOrder(Integer)
   fullName: CRMScript.NetServer.NSKbCategory.SetSortOrder(Integer)
   type: Method
-  summary: "\nA strictly ascending number used for sorting categories when they are listed.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetSortOrder(Integer sortOrder)
     parameters:
     - id: sortOrder
       type: CRMScript.Global.Integer
-      description: 
+      description: A strictly ascending number used for sorting categories when they are listed.
     return:
       type: CRMScript.Global.Void
   example: 
